--- a/jazzy/doc-build.yaml
+++ b/jazzy/doc-build.yaml
@@ -52,8 +52,8 @@ targets:
     noble:
       amd64:
 type: doc-build
-upload_credential_id: jenkins-agent
+upload_credential_id: rosdocs
 upload_host: docs.ros.org
 upload_root: /var/www/docs.ros.org/en/ros2_packages
-upload_user: rosbot
+upload_user: rosdocs
 version: 2
